bk_ida/gccida/c0/fixup_reorder_chain
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_reorder_chain/src/cfglayout.c:927:7: error: use of undeclared identifier 'arg0'
v2 = &arg0; 
      ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_reorder_chain/src/obj/cfglayout.o] Error 1
